[package]
name = "sharkdown"
version = "0.1.0"
authors = ["Matthew Blode <m@blode.co>"]
edition = "2018"
description = "Sharkdown is a markdown parser"
documentation = "https://docs.rs/sharkdown"
readme = "README.md"
repository = "https://github.com/mblode/sharkdown/"
license = "MIT"
keywords = ["sharkdown", "commonmark", "md", "parser", "markdown"]
categories = ["command-line-utilities", "markdown"]

[dependencies]
regex = "1"
lazy_static = "1.4"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
